CiliumServicemesh/blue-green-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue
  labels:
    app: myapp-blue
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: myapp-blue
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-green
  labels:
    app: myapp-green
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: myapp-green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp-blue
    version: v1
  name: myapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-blue
      version: v1
  strategy: 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp-blue
        version: v1
    spec:
      containers:
      - image: janakiramm/myapp:v1
        name: myapp-blue
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp-green
    version: v2
  name: myapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-green
      version: v2
  strategy: 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp-green
        version: v2
    spec:
      containers:
      - image: janakiramm/myapp:v2
        name: myapp-green
        ports:
        - containerPort: 80
