CiliumServicemesh/gateway-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: blue-green
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http-gw
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-2
  namespace: blue-green
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: app-gateway
      namespace: blue-green
  rules:
  - backendRefs:
    - name: myapp-blue 
      port: 80
      weight: 50
    - name: myapp-green
      port: 80
      weight: 50
